syntax = "proto3";

package yir.uzi;

import "google/api/annotations.proto";

option go_package = "yir/uzi/api/uzi;uzi";

message UziDevice {
  uint64 id = 1;
  string name = 2;
}

message CreateImageRequest {
  int32 uzi_device_id = 1;
  string projection_type = 2;
  int32 patient_card_id = 3;
}

// Покумекать
//
message CreateImageResponse {
  string original_image = 1;
}

message GetDeviceListRequest {
  int64 limit = 1;
  int64 offset = 2;
}

message GetDeviceListResponse {
  uint64 count = 1;
  string next = 2;
  string previous = 3;
  string first = 4;
  string last = 5;
  repeated UziDevice results = 6;
}

service UziService {
  rpc CreateImage(CreateImageRequest) returns (CreateImageResponse) {
    option (google.api.http) = {
      post: "/uzi/create"
      body: "*"
    };
  }

  rpc GetDeviceList(GetDeviceListRequest) returns (GetDeviceListResponse) {
    option (google.api.http) = {
      get: "/uzi/devices"
    };
  }
}